--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
 		"linebreak-style": 0,
 		"react/jsx-indent": ["error", 4],
 		"react/jsx-indent-props": ["error", 4],
-		"no-console": "off"
+		"no-console": "off",
+		"react/prop-types": 0
 	}
 }
