--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
 		"linebreak-style": 0,
 		"react/jsx-indent": ["error", 4],
 		"react/jsx-indent-props": ["error", 4],
-		"no-console": "off"
+		"no-console": "off",
+		"comma-dangle": 0
 	}
 }
